src/IMPUtils/IMPParser.py
# Generated from IMP.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IMPParser ( Parser ):

    grammarFileName = "IMP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'int '", "','", "'logical '", 
                     "'if'", "'else'", "'>'", "'&&'", "'+'", "'/'", "'!'", 
                     "'('", "')'", "'{'", "'}'", "'while'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "BVAL", "VAR", "AVAL", "EQ" ]

    RULE_program = 0
    RULE_varlist = 1
    RULE_intvarlist = 2
    RULE_boolvarlist = 3
    RULE_ifconstruct = 4
    RULE_expr = 5
    RULE_bexpr = 6
    RULE_seq = 7
    RULE_greater = 8
    RULE_and = 9
    RULE_plus = 10
    RULE_div = 11
    RULE_not = 12
    RULE_bracket = 13
    RULE_block = 14
    RULE_assigment = 15
    RULE_statement = 16
    RULE_whileconstruct = 17
    RULE_bool = 18
    RULE_var = 19
    RULE_int = 20

    ruleNames =  [ "program", "varlist", "intvarlist", "boolvarlist", "ifconstruct", 
                   "expr", "bexpr", "seq", "greater", "and", "plus", "div", 
                   "not", "bracket", "block", "assigment", "statement", 
                   "whileconstruct", "bool", "var", "int" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    WS=17
    BVAL=18
    VAR=19
    AVAL=20
    EQ=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(IMPParser.VarlistContext,0)


        def seq(self):
            return self.getTypedRuleContext(IMPParser.SeqContext,0)


        def statement(self):
            return self.getTypedRuleContext(IMPParser.StatementContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IMPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.varlist()
                self.state = 43
                self.match(IMPParser.T__0)
                self.state = 44
                self.seq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.varlist()
                self.state = 47
                self.match(IMPParser.T__0)
                self.state = 48
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intvarlist(self):
            return self.getTypedRuleContext(IMPParser.IntvarlistContext,0)


        def boolvarlist(self):
            return self.getTypedRuleContext(IMPParser.BoolvarlistContext,0)


        def varlist(self):
            return self.getTypedRuleContext(IMPParser.VarlistContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = IMPParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varlist)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.intvarlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.boolvarlist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.intvarlist()
                self.state = 55
                self.match(IMPParser.T__0)
                self.state = 56
                self.varlist()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.boolvarlist()
                self.state = 59
                self.match(IMPParser.T__0)
                self.state = 60
                self.varlist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntvarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(IMPParser.VAR)
            else:
                return self.getToken(IMPParser.VAR, i)

        def getRuleIndex(self):
            return IMPParser.RULE_intvarlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntvarlist" ):
                listener.enterIntvarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntvarlist" ):
                listener.exitIntvarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntvarlist" ):
                return visitor.visitIntvarlist(self)
            else:
                return visitor.visitChildren(self)




    def intvarlist(self):

        localctx = IMPParser.IntvarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_intvarlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(IMPParser.T__1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    self.match(IMPParser.VAR)
                    self.state = 66
                    self.match(IMPParser.T__2) 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 72
            self.match(IMPParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolvarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(IMPParser.VAR)
            else:
                return self.getToken(IMPParser.VAR, i)

        def getRuleIndex(self):
            return IMPParser.RULE_boolvarlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolvarlist" ):
                listener.enterBoolvarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolvarlist" ):
                listener.exitBoolvarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolvarlist" ):
                return visitor.visitBoolvarlist(self)
            else:
                return visitor.visitChildren(self)




    def boolvarlist(self):

        localctx = IMPParser.BoolvarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_boolvarlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(IMPParser.T__3)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 75
                    self.match(IMPParser.VAR)
                    self.state = 76
                    self.match(IMPParser.T__2) 
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 82
            self.match(IMPParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfconstructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bexpr(self):
            return self.getTypedRuleContext(IMPParser.BexprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.BlockContext)
            else:
                return self.getTypedRuleContext(IMPParser.BlockContext,i)


        def getRuleIndex(self):
            return IMPParser.RULE_ifconstruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfconstruct" ):
                listener.enterIfconstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfconstruct" ):
                listener.exitIfconstruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfconstruct" ):
                return visitor.visitIfconstruct(self)
            else:
                return visitor.visitChildren(self)




    def ifconstruct(self):

        localctx = IMPParser.IfconstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifconstruct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(IMPParser.T__4)
            self.state = 85
            self.bexpr(0)
            self.state = 86
            self.block()
            self.state = 87
            self.match(IMPParser.T__5)
            self.state = 88
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bracket(self):
            return self.getTypedRuleContext(IMPParser.BracketContext,0)


        def var(self):
            return self.getTypedRuleContext(IMPParser.VarContext,0)


        def int_(self):
            return self.getTypedRuleContext(IMPParser.IntContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.ExprContext)
            else:
                return self.getTypedRuleContext(IMPParser.ExprContext,i)


        def div(self):
            return self.getTypedRuleContext(IMPParser.DivContext,0)


        def plus(self):
            return self.getTypedRuleContext(IMPParser.PlusContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IMPParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IMPParser.T__11]:
                self.state = 91
                self.bracket()
                pass
            elif token in [IMPParser.VAR]:
                self.state = 92
                self.var()
                pass
            elif token in [IMPParser.AVAL]:
                self.state = 93
                self.int_()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 104
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = IMPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 97
                        self.div()
                        self.state = 98
                        self.expr(5)
                        pass

                    elif la_ == 2:
                        localctx = IMPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 101
                        self.plus()
                        self.state = 102
                        self.expr(4)
                        pass

             
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bracket(self):
            return self.getTypedRuleContext(IMPParser.BracketContext,0)


        def not_(self):
            return self.getTypedRuleContext(IMPParser.NotContext,0)


        def bexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.BexprContext)
            else:
                return self.getTypedRuleContext(IMPParser.BexprContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.ExprContext)
            else:
                return self.getTypedRuleContext(IMPParser.ExprContext,i)


        def greater(self):
            return self.getTypedRuleContext(IMPParser.GreaterContext,0)


        def bool_(self):
            return self.getTypedRuleContext(IMPParser.BoolContext,0)


        def and_(self):
            return self.getTypedRuleContext(IMPParser.AndContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_bexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexpr" ):
                listener.enterBexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexpr" ):
                listener.exitBexpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBexpr" ):
                return visitor.visitBexpr(self)
            else:
                return visitor.visitChildren(self)



    def bexpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IMPParser.BexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_bexpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 110
                self.bracket()
                pass

            elif la_ == 2:
                self.state = 111
                self.not_()
                self.state = 112
                self.bexpr(4)
                pass

            elif la_ == 3:
                self.state = 114
                self.expr(0)
                self.state = 115
                self.greater()
                self.state = 116
                self.expr(0)
                pass

            elif la_ == 4:
                self.state = 118
                self.bool_()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = IMPParser.BexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bexpr)
                    self.state = 121
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 122
                    self.and_()
                    self.state = 123
                    self.bexpr(3) 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SeqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.StatementContext)
            else:
                return self.getTypedRuleContext(IMPParser.StatementContext,i)


        def seq(self):
            return self.getTypedRuleContext(IMPParser.SeqContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq" ):
                listener.enterSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq" ):
                listener.exitSeq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeq" ):
                return visitor.visitSeq(self)
            else:
                return visitor.visitChildren(self)




    def seq(self):

        localctx = IMPParser.SeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_seq)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.statement()
                self.state = 131
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.statement()
                self.state = 134
                self.seq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GreaterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IMPParser.RULE_greater

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreater" ):
                listener.enterGreater(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreater" ):
                listener.exitGreater(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreater" ):
                return visitor.visitGreater(self)
            else:
                return visitor.visitChildren(self)




    def greater(self):

        localctx = IMPParser.GreaterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_greater)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(IMPParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IMPParser.RULE_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)




    def and_(self):

        localctx = IMPParser.AndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_and)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(IMPParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IMPParser.RULE_plus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlus" ):
                listener.enterPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlus" ):
                listener.exitPlus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlus" ):
                return visitor.visitPlus(self)
            else:
                return visitor.visitChildren(self)




    def plus(self):

        localctx = IMPParser.PlusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_plus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(IMPParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IMPParser.RULE_div

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)




    def div(self):

        localctx = IMPParser.DivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_div)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(IMPParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IMPParser.RULE_not

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)




    def not_(self):

        localctx = IMPParser.NotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_not)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(IMPParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BracketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(IMPParser.ExprContext,0)


        def bexpr(self):
            return self.getTypedRuleContext(IMPParser.BexprContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_bracket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracket" ):
                listener.enterBracket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracket" ):
                listener.exitBracket(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBracket" ):
                return visitor.visitBracket(self)
            else:
                return visitor.visitChildren(self)




    def bracket(self):

        localctx = IMPParser.BracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_bracket)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(IMPParser.T__11)
                self.state = 149
                self.expr(0)
                self.state = 150
                self.match(IMPParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(IMPParser.T__11)
                self.state = 153
                self.bexpr(0)
                self.state = 154
                self.match(IMPParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq(self):
            return self.getTypedRuleContext(IMPParser.SeqContext,0)


        def statement(self):
            return self.getTypedRuleContext(IMPParser.StatementContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = IMPParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(IMPParser.T__13)
                self.state = 159
                self.match(IMPParser.T__14)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(IMPParser.T__13)
                self.state = 161
                self.seq()
                self.state = 162
                self.match(IMPParser.T__14)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.match(IMPParser.T__13)
                self.state = 165
                self.statement()
                self.state = 166
                self.match(IMPParser.T__14)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(IMPParser.VarContext,0)


        def EQ(self):
            return self.getToken(IMPParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(IMPParser.ExprContext,0)


        def bexpr(self):
            return self.getTypedRuleContext(IMPParser.BexprContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_assigment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigment" ):
                listener.enterAssigment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigment" ):
                listener.exitAssigment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigment" ):
                return visitor.visitAssigment(self)
            else:
                return visitor.visitChildren(self)




    def assigment(self):

        localctx = IMPParser.AssigmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_assigment)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.var()
                self.state = 171
                self.match(IMPParser.EQ)
                self.state = 172
                self.expr(0)
                self.state = 173
                self.match(IMPParser.T__0)
                pass
